[package]
name = "eikyu"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ak"
path = "src/ak.rs"
[dependencies]
clap = "4.5.45"
serde = { version = "1.0.219", features = ["derive"] }
crc32fast = "1.5.0"
ignore = "0.4.23"
indicatif = "0.18.0"
blake3 = "1.8.2"
inquire = "0.7.5"
glob = "0.3.3"
chrono = "0.4.41"
