[package]
name = "eikyu"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ak"
path = "src/ak.rs"
[dependencies]
clap = "4.5.45"
serde = { version = "1.0.219", features = ["derive"] }
crc32fast = "1.5.0"
ignore = "0.4.23"
indicatif = "0.18.0"
blake3 = "1.8.2"
inquire = { version = "0.7.5", features = ["console", "date", "editor"] }
chrono = "0.4.41"
diff = "0.1.13"
serde_json = "1.0.142"
colored = "3.0.0"
